<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:id="@+id/layout_details_list"
    android:background="@drawable/border_black"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="22sp"
        android:textColor="@color/yellow"
        android:id="@+id/details_result"
        android:layout_marginTop="7dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="19sp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:id="@+id/details_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/details_moves"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:id="@+id/details_date"/>

</LinearLayout>
