<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_difficulty"
        android:text="@string/difficulty"
        android:textSize="30sp"
        android:textColor="@color/lightOrange"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/none_block">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_none"
            android:text="@string/nothing_display"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/details_block">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_best_time"
            android:text="@string/best_time"
            android:textSize="25sp"
            android:textColor="@color/purple"
            android:layout_marginBottom="15dp"/>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/details_list_view"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp">

        </ListView>
    </LinearLayout>


</LinearLayout>